# pgauthz

./: .gitignore  Cargo.toml  Dockerfile  GETTING_STARTED.md  META.json  Makefile  README.md  mkdocs.yml  package.json
.cargo/: config.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
agents/: README.md
crates/authz-datastore-pgx/: Cargo.toml
crates/authz-datastore-pgx/src/: lib.rs
crates/pgauthz/: Cargo.toml  pgauthz.control
crates/pgauthz/benches/: check_bench.rs  check_bench_pg.rs
crates/pgauthz/sql/: init.sql
crates/pgauthz/src/: cache.rs  check_functions.rs  errors.rs  guc.rs  lib.rs  list_functions.rs  matrix_runner.rs  matrix_tests.rs  metrics.rs  telemetry.rs  tracing_bridge.rs  validation.rs  validation_tests.rs
crates/pgauthz/tests/: integration_matrix.rs  test_tracing.sql
crates/pgauthz/tests/matrix/: basic_check.yaml  check_semantics.yaml  comprehensive_v1.yaml  conditions_and_context.yaml  expand_semantics.yaml  expiration_semantics.yaml  grammar_test.yaml  identifier_edgecases.yaml  list_objects_semantics.yaml  list_subjects_semantics.yaml  model_operations.yaml  nested_groups_exclusions.yaml  setops_precedence.yaml  simple_direct.yaml  simple_permissions.yaml  tuple_operations.yaml  wildcard_semantics.yaml
docs/: api-reference.md  configuration.md  debugging.md  index.md  installation.md  observability.md  performance.md  policy-management.md  quickstart.md
docs/examples/: basic-authorization.md  condition-based.md  performance-testing.md
scripts/: build-docs.sh  update-hash-mappings.sh
skills/: README.md  skills-manifest.json
skills/skills/policy-evolution/: skill.json  skill.md
src/: lib.rs
tests/: integration_e2e.rs  integration_pgauthz.rs
versions/: version-map.json
