[package]
name = "authz-datastore-pgx"
version = "0.2.0"
edition = "2024"
description = "SPI-based datastore impl for pgauthz extension"

[features]
default = []
pgx = ["dep:pgrx", "dep:ulid", "dep:uuid"]
pg16 = ["pgrx?/pg16"]
pg17 = ["pgrx?/pg17"]
pg18 = ["pgrx?/pg18"]

[dependencies]
authz-core = "0.1.0"
async-trait = "0.1"
pgrx = { version = "0.17", optional = true, default-features = false }
ulid = { version = "1.1", optional = true }
uuid = { version = "1.11", optional = true }
